--- a/wheel/index.html
+++ b/wheel/index.html
@@ -180,19 +180,24 @@
 
             <div>
                 <input type="radio" id="huey" name="list" value="inventory" autocomplete="off" checked />
-                <label for="huey">Шмотки</label>
+                <label for="huey">Общее</label>
             </div>
 
             <div>
                 <input type="radio" id="dewey" name="list" value="effects" autocomplete="off" />
-                <label for="dewey">События</label>
+                <label for="dewey">Баффы</label>
             </div>
 
             <div>
                 <input type="radio" id="scrudge" name="list" value="debuffs" autocomplete="off" />
                 <label for="scrudge">Дебаффы</label>
             </div>
-
+            
+            <div>
+                <input type="radio" id="webby" name="list" value="podlyanki" autocomplete="off" />
+                <label for="webby">Подлянки</label>
+            </div>
+            
             <div>
                 <input type="radio" id="louie" name="list" value="coin" autocomplete="off" />
                 <label for="louie">Монетка</label>
