--- a/wheel/index.html
+++ b/wheel/index.html
@@ -10,57 +10,57 @@
     <div class="image-grid-view">
         <div class="hero-background">
             <ul class="image-grid">
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/001.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/002.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/003.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/004.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/005.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/006.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/007.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/008.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/009.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/010.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/011.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/012.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/013.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/014.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/015.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/016.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/017.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/018.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/019.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/020.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/021.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/022.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/023.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/024.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/025.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/026.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/027.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/028.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/029.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/030.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/031.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/032.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/033.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/034.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/035.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/036.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/037.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/038.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/039.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/040.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/041.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/042.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/043.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/044.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/045.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/046.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/047.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/048.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/049.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/050.png" alt=""></li>
-                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/051.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Mine now TriHard.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/А где это я.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Аптечка.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Бог любит троицу.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Взрывчатка.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Всепоглощающий свин.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Выбор бумера.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Выбор зумера.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Грабли.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Грязнулькин.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Дырявый парашют.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Заначка Старыги.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Инструменты клоуна.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Интрига.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Корона Колесного короля.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Красочная манга.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Крыса.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Кубик хуюбика.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Лепреконий схрон.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Мистер Ржавчик.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Напёрсток удачи.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Однорукий бандит.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Орёл или решка.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Очки EZ.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Парные кольца времени.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Плюсовый блокнот.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Повязка Рэмбо.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Полукаловая монетка.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Реверсивные сапоги.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Ремонтный набор.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Рука для fisting.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Рука мидаса.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Свиток реролла.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Стример не тупой.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Тормознутый.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Торопыга.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Тотем мошны.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Туалетка.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Тухлая шаурма.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Увы.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Удачный неудачник.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Хук Пуджа.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Часовой рост.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Часы перемен.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Четырёхлистный клевер.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Читерский кубик.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Чокер боли.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Шар всезнания.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Шоколад.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Штрафная Квитанция.png" alt=""></li>
+                <li class="image-grid-item-container"><img class="image-grid-item" src="../hpg-inventory/images/Я здесь закон.png" alt=""></li>
             </ul>
         </div>
         <div class="hero-background-overlay"></div>
